Add sound feature to the app

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,14 @@
 
       <!-- クラッカーボタン -->
       <button id="cracker-btn">🎉 Tap Me! 🎉</button>
-
       <canvas id="confetti-canvas"></canvas>
+      <audio id="cracker-sound">
+        <source src="sound/Balloon-Pop01-3.mp3" type="audio/mpeg" />
+        <source src="sound/Balloon-Pop01-3.ogg" type="audio/ogg" />
+        Your browser does not support the audio element.
+      </audio>
 
+      <!-- いいねボタン -->
       <button id="like-button">いいね</button>
       <p>いいね数: <span id="like-count">0</span></p>
     </div>
